<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rust_tutorial</name>
  <version>0.1.0</version>
  <description>safe_serial_bridgeC</description>
  <maintainer email="hoge@hoge.com">Hoge Hogesuke</maintainer>
  <license>Hoge license</license>

  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>